CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(CAPSCOMPDLL)

# Paramètres

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/BuildDLL)
SET(BUILD_FRAMEWORK 1)

# Parametre Repertoire
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/DLLCompilationEXE_temporaire/Header)

FILE(GLOB_RECURSE ENGINE_SOURCES *.cpp *.c)
FILE(GLOB_RECURSE ENGINE_HEADERS *.hpp *.h *.inl)

ADD_EXECUTABLE(CAPSCOMPDLL ${ENGINE_SOURCES} ${ENGINE_HEADERS})
